--- a/client-extensions/raylife-custom-element/package.json
+++ b/client-extensions/raylife-custom-element/package.json
@@ -28,9 +28,11 @@
     "@googlemaps/js-api-loader": "^1.12.2",
     "axios": "1.6.2",
     "classnames": "2.3.1",
+    "i18next": "^24.0.5",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.8.8",
+    "react-i18next": "^15.1.4",
     "react-number-format": "^4.6.3",
     "react-scripts": "5.0.1"
   },
