--- a/client-extensions/raylife-custom-element/package.json
+++ b/client-extensions/raylife-custom-element/package.json
@@ -29,6 +29,7 @@
     "axios": "1.6.2",
     "classnames": "2.3.1",
     "i18next": "^24.0.5",
+    "moment": "^2.30.1",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.8.8",
